tests/snapshots/gpio__input_pin_type_erasure_number.snap
---
source: tests/gpio.rs
expression: report.take_log()
---
r    0xF003A024 04 0x00000000
r    0xF003A024 04 0x00000080

