tests/snapshots/gpio__pin_set_two_pins_same_port_high.snap
---
source: tests/gpio.rs
expression: report.get_log()
---
w    0xF003A004 04 0x00200000
ldms 0xF003A014 0x0000FF00 0x00008000
w    0xF003A004 04 0x00400000
ldms 0xF003A014 0x00FF0000 0x00800000
w    0xF003A004 04 0x00000020
w    0xF003A004 04 0x00000040

