tests/snapshots/gpio__toggle_output_pin.snap
---
source: tests/gpio.rs
expression: report.take_log()
---
w    0xF003A004 04 0x00200000
ldms 0xF003A014 0x0000F800 0x00008000
w    0xF003A004 04 0x00200020

