tests/snapshots/gpio__toggle_stateful_output_pin_type_erasure_number.snap
---
source: tests/gpio.rs
expression: report.get_log()
---
w    0xF003A004 04 0x00200000
ldms 0xF003A014 0x0000F800 0x00008000
r    0xF003A000 04

